2000-04-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Remove output file before linking.

	* octMakefile.in (DIRS_TO_MAKE): Create $(octincludedir)/octave.
	(install install-strip): Install config.h in $(octincludedir)/octave,
	not $(octincludedir).

2000-03-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (DIRS_TO_MAKE): Double up on $ in awk command to
	get them past Make.

2000-03-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (SUBDIRS): Omit src.
	(ALL_SUBDIRS): New variable.  Include src here.
	(all): Depend on src instead of $(SUBDIRS).
	(src): New target.  Depend on $(SUBDIRS).

	* Makefile.in (.NOTPARALLEL): New target, for GNU Make 3.79.
	* octMakefile.in (.NOTPARALLEL): Likewise.

2000-03-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for vsnprintf.

2000-03-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (liboctave.$(SHLEXT)): Delete target before rebuilding.

2000-03-21  Ben Sapp <bsapp@nua.lampf.lanl.gov>:

	* Makeconf.in (%.o : %.c): Pass -o to compile command.
	(%.o : %.cc): Ditto.
	* configure.in (%.o : %.f): Ditto.

2000-03-08  Stephen Eglen  <stephen@gnu.org>

	* emacs/octave-mod.el (octave-font-lock-keywords): To font-lock
	the builtin operators, use `font-lock-builtin-face' for Emacs
	and `font-lock-preprocessor-face' for XEmacs.

2000-03-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: For building shared libaries, handle
	i386-pc-solaris2* the same as sparc-sun-solaris2*.

2000-02-29  Ben Sapp <bsapp@nua.lampf.lanl.gov>

	* examples/make_int.cc (make_int): Handle new operator names.

2000-02-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (maintainer-clean distclean): Don't delete Makefile.
	(dist): Delete stamp-auto.

2000-02-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (octincludedir): Delete trailing /octave here.
	* Makeconf.in (mk-includedir-link): Append it here.
	(MKOCTFILE_INCFLAGS): Use both -I$(octincludedir) and